--- a/index4B.html
+++ b/index4B.html
@@ -1,106 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="pr-br">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TCC 2</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-    <link rel="stylesheet" href="style4.css">
+    <title>grid</title>
 </head>
 
 <body>
-    <div class="wrapper">
-
-        <nav id="sidebar">
-            <div class="sidebar-head">
-                <a href="#">
-                    <div class="photo-circular">
-                        <img src="Sem Título-32.jpg" alt="Bruno Moura">
-                    </div>
-                </a>
-            </div>
-            <ul class="list-group">
-
-                <li><a href="#"><i class="fas fa-home"></i>
-                        <span>Início</span></a></li>
-                <li><a href="#"><i class="fas fa-user"></i>
-                        <span>Perfil</span></a></li>
-                <li><a href="#"><i class="far fa-calendar-check"></i>
-                        <span>Reservar Sala</span></a></li>
-                <li><a href="#" id="sair"><i class="fas fa-sign-out-alt"></i>
-                        <span>Sair</span></a></l1>
-
-            </ul>
-        </nav>
-        <div id="page">
-            <nav class="navbar navbar-default">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <button type="button" id="menu" class="btn fas fa-chevron-left" onclick="mudar()"></button>
-                    </div>
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Buscar Sala...">
-                        <button type="button" class="btn"><i id="input" class="fas fa-search"></i></button>
-                    </form>
-                </div>
-            </nav>
-
-            <h2>Receita de Omelete</h2>
-            <h3>Ingredientes</h3>
-            <ul>
-                <li>
-                    2 Ovos
-                </li>
-                <li>
-                    1 pitada de Sal
-                </li>
-                <li>
-                    1 fatia de presunto
-                </li>
-                <li>
-                    2 fatias de queijo
-                </li>
-                <li>
-                    Tempero verde a gosto
-                </li>
-            </ul>
-
-            <div class="line"></div>
-
-            <h3>Modo de Preparo</h3>
-            <ul>
-                <li>
-                    Bata os 2 ovos, pode ser na batedeira ou não.
-                </li>
-                <li>
-                    Após ter batido bem, coloque-o na frigideira já untada com óleo, acrescente o sal, o presunto picado
-                    em quadradinhos e as duas fatias de queijo (não precisa picar o queijo).
-                </li>
-                <li>
-                    Coloque os temperos a gosto, espere ficar firme, e vire o omelete.
-                </li>
-                <li>
-                    Está pronto um omelete delicioso, bom apetite!
-                </li>
+    <div class="grid areas">
+        <div class="nav">
+            <h2>TCC</h2>
+            <ul class="menu">
+                <li><a href="#">Home</a></li>
+                <li><a class="button" href="#">Salas</a></li>
+                <li><a href="#">Sair</a></li>
             </ul>
         </div>
+        <div class="content">
 
+        </div>
+
+        <div id="modalID" class="pop-up">
+            <div class="sala">
+                <!--<button id="fechar">X</button>-->
+            </div>
+
+        </div>
     </div>
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('#menu').click(function () {
-                $('#sidebar').toggleClass('active');
+    <script>
+        function iniciar(modalID) {
+            const modal = document.getElementById(modalID);
+            modal.classList.add('mostrar')
+            modal.addEventListener('click', () => {
+                if (event.target.id == modalID) {
+                    modal.classList.remove('mostrar')
+                }
             });
-        }); 
+        }
+
+        document.querySelector('.button').addEventListener('click', () => iniciar('modalID'));
     </script>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 </body>
 
 </html>
