--- a/index4B.html
+++ b/index4B.html
@@ -26,6 +26,106 @@
         <div id="modalID" class="pop-up">
             <div class="sala">
                 <!--<button id="fechar">X</button>-->
+                <ul>
+                    <li><a href="#">Lab.Info</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Lab.Info</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Lab.Info</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Lab.Info</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                    <li><a href="#">Sala 1</a></li>
+                </ul>
             </div>
 
         </div>
@@ -35,6 +135,7 @@
             const modal = document.getElementById(modalID);
             modal.classList.add('mostrar')
             modal.addEventListener('click', () => {
+                console.log(event)
                 if (event.target.id == modalID) {
                     modal.classList.remove('mostrar')
                 }
