--- a/index4B.html
+++ b/index4B.html
@@ -24,108 +24,86 @@
         </div>
 
         <div id="modalID" class="pop-up">
-            <div class="sala">
+            <div class="salas">
                 <!--<button id="fechar">X</button>-->
-                <ul>
-                    <li><a href="#">Lab.Info</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                </ul>
-                <ul>
-                    <li><a href="#">Lab.Info</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                </ul>
-                <ul>
-                    <li><a href="#">Lab.Info</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                </ul>
-                <ul>
-                    <li><a href="#">Lab.Info</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                </ul>
-                <ul>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                </ul>
-                <ul>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                </ul>
-                <ul>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                </ul>
-                <ul>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                </ul>
-                <ul>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                </ul>
-                <ul>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                    <li><a href="#">Sala 1</a></li>
-                </ul>
+                <div class="bloco">
+                    <ul>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                    </ul>
+                </div>
+                <div class="bloco">
+                    <ul>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                    </ul>
+                </div>
+                <div class="bloco">
+                    <ul>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                    </ul>
+                </div>
+                <div class="bloco">
+                    <ul>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                    </ul>
+                </div>
+                <div class="bloco">
+                    <ul>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                    </ul>
+                </div>
+                <div class="bloco">
+                    <ul>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                    </ul>
+                </div>
+                <div class="bloco">
+                    <ul>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                        <li class="sala"><a href="#">Lab.Info</a></li>
+                    </ul>
+                </div>
+
             </div>
 
         </div>
