--- a/index4B.html
+++ b/index4B.html
@@ -16,94 +16,120 @@
             <ul class="menu">
                 <li><a href="#">Home</a></li>
                 <li><a class="button" href="#">Salas</a></li>
-                <li><a href="#">Sair</a></li>
+                <li><a href="MeusProjetos/login/index.html">Sair</a></li>
             </ul>
         </div>
         <div class="content">
+           <section class="left">
+                <div class="status">
+                    <ul>
+                        <li>Nome: </li>
+                        <li>Responsavel: </li>
+                        <li>Situação: </li>
+                    </ul>
+                    <input type="button" id="reserva" value="Reservar">
+                </div>
+           </section>
+           <section class="right">
+            <div class="grafico">
+                <div>
 
+                </div>
+            </div>
+           </section>
         </div>
-
+        <div class="clear"></div>
         <div id="modalID" class="pop-up">
             <div class="salas">
                 <!--<button id="fechar">X</button>-->
-                <div class="bloco">
-                    <ul>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                    </ul>
-                </div>
-                <div class="bloco">
-                    <ul>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                    </ul>
-                </div>
-                <div class="bloco">
-                    <ul>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                    </ul>
-                </div>
-                <div class="bloco">
-                    <ul>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                    </ul>
-                </div>
-                <div class="bloco">
-                    <ul>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                    </ul>
-                </div>
-                <div class="bloco">
-                    <ul>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                    </ul>
-                </div>
-                <div class="bloco">
-                    <ul>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                        <li class="sala"><a href="#">Lab.Info</a></li>
-                    </ul>
-                </div>
-
+                <ul id="list" class="container">
+                    <div>
+                        <li class="item"><a href="#">Lab info</a></li>
+                        <li class="item"><a href="#">Lab info</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Bio</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Redes</a></li>
+                        <li class="item inline-b-item"><a href="#">Sala 44</a></li>
+                        <li class="item inline-b-item"><a href="#">Sala 57</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Quim</a></li>
+                    </div>
+                </ul>
+                <ul id="list" class="container">
+                    <div>
+                        <li class="item"><a href="#">Lab info</a></li>
+                        <li class="item"><a href="#">Lab info</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Bio</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Redes</a></li>
+                        <li class="item inline-b-item"><a href="#">Sala 44</a></li>
+                        <li class="item inline-b-item"><a href="#">Sala 57</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Quim</a></li>
+                    </div>
+                </ul>
+                <ul id="list" class="container">
+                    <div>
+                        <li class="item"><a href="#">Lab info</a></li>
+                        <li class="item"><a href="#">Lab info</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Bio</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Redes</a></li>
+                        <li class="item inline-b-item"><a href="#">Sala 44</a></li>
+                        <li class="item inline-b-item"><a href="#">Sala 57</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Quim</a></li>
+                    </div>
+                </ul>
+                <ul id="list" class="container">
+                    <div>
+                        <li class="item"><a href="#">Lab info</a></li>
+                        <li class="item"><a href="#">Lab info</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Bio</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Redes</a></li>
+                        <li class="item inline-b-item"><a href="#">Sala 44</a></li>
+                        <li class="item inline-b-item"><a href="#">Sala 57</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Quim</a></li>
+                    </div>
+                </ul>
+                <ul id="list" class="container">
+                    <div>
+                        <li class="item"><a href="#">Lab info</a></li>
+                        <li class="item"><a href="#">Lab info</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Bio</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Redes</a></li>
+                        <li class="item inline-b-item"><a href="#">Sala 44</a></li>
+                        <li class="item inline-b-item"><a href="#">Sala 57</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Quim</a></li>
+                    </div>
+                </ul>
+                <ul id="list" class="container">
+                    <div>
+                        <li class="item"><a href="#">Lab info</a></li>
+                        <li class="item"><a href="#">Lab info</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Bio</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Redes</a></li>
+                        <li class="item inline-b-item"><a href="#">Sala 44</a></li>
+                        <li class="item inline-b-item"><a href="#">Sala 57</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Quim</a></li>
+                    </div>
+                </ul>
+                <ul id="list" class="container">
+                    <div>
+                        <li class="item"><a href="#">Lab info</a></li>
+                        <li class="item"><a href="#">Lab info</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Bio</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Redes</a></li>
+                        <li class="item inline-b-item"><a href="#">Sala 44</a></li>
+                        <li class="item inline-b-item"><a href="#">Sala 57</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Quim</a></li>
+                    </div>
+                </ul>
+                <ul id="list" class="container">
+                    <div>
+                        <li class="item"><a href="#">Lab info</a></li>
+                        <li class="item"><a href="#">Lab info</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Bio</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Redes</a></li>
+                        <li class="item inline-b-item"><a href="#">Sala 44</a></li>
+                        <li class="item inline-b-item"><a href="#">Sala 57</a></li>
+                        <li class="item inline-b-item"><a href="#">Lab Quim</a></li>
+                    </div>
+                </ul>
             </div>
 
         </div>
@@ -113,7 +139,6 @@
             const modal = document.getElementById(modalID);
             modal.classList.add('mostrar')
             modal.addEventListener('click', () => {
-                console.log(event)
                 if (event.target.id == modalID) {
                     modal.classList.remove('mostrar')
                 }
@@ -121,6 +146,10 @@
         }
 
         document.querySelector('.button').addEventListener('click', () => iniciar('modalID'));
+
+        
+
+
     </script>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
